hphp/test/zend/good/ext/gettext/tests/gettext_bindtextdomain-emptydomain.php.skipif
<?php
if (!extension_loaded("gettext")) {
    die("skip gettext extension is not loaded.\n");
}