hphp/test/zend/bad/ext/xsl/tests/xsl-phpinfo.php.skipif
<?php 
	if (!extension_loaded("xsl")) {
		die("SKIP extension gettext not loaded\n");
	}
?>